@@ -1,5 +1,7 @@
 2009-04-07  Sverker Nilsson  <sverker@sverker-laptop>
 
+	* guppy/heapy/Monitor.py: made import readline optional
+
 	* setup.py (doit): package_data uses *.html & *.jpg
 
 2009-03-08  Sverker Nilsson  <sverker@sverker-laptop>
